	   reported as such.
	pgsql:
	 . Use gzip's --rsyncable option.
	 . Quote output filenames to support shell meta-characters in
	   database names.
	 . Use bash pipefail option when needed so that failed dumps are
	   reported as such.
	rdiff:
	 . Fix include/exclude paths with spaces (Closes: #398435)
	 . Fix confusing error if rdiff-backup cannot be found on remote server.
	sys:
	 . New luksheaders option (default=disabled) to backup the Luks header
	   of every Luks device.
	 . New lvm option (default=disabled) to backup LVM metadata for every
	   detected volume group.
	 . Backup dmsetup info as well, for easier restoring of Luks headers.
	dup:
	 . Fixed bandwidthlimit syntax error. Thanks to Ian Beckwith for
	   the patch.
	 . Send duplicity output to debug line by line instead of as a whole at
	   one time (Closes: #536360)
	 . Report duplicity output as "info" so that it can be included in
	   report e-mail when reportinfo is on (Closes: #563734)
	 . Fix include/exclude paths with spaces
	 . Support backups to Amazon S3 buckets, thanks to stefan for the patch.
    helper changes
	dup:
	 . Do not propose to exclude /home/*/.gnupg twice anymore
	   (Closes: #563044)
    autotools
	 . Added the stat command to the automagically replaced ones, hoping it
	   will help supporting *BSD some day.

version 0.9.6 -- July 21, 2008
    backupninja changes
	 . fix bug in cstream definition, thanks Jamie McClelland
	 . Allow the entire backup run to be halted by an action, thanks to
	   Matthew Palmer (Closes: #455836)
	 . Fixed tr construct reporting a warning (Closes: #452669)
    lib changes
	vserver:
	 . added vservers_running function
	tools
	 . mktemp is now required to run backupninja, removed less secure
	   fall-back if mktemp did not exist on the system
    handler changes
	dup:
	 . General cleanup
	 . Better support for new duplicity (>= 0.4.4) command line syntax:
	   run remove-older-than when $keep is not set to yes (Closes: #458816),